GEP-165 Add first modification of model from frontend
